[tool.poetry]
name = "hlocation"
version = "1.0.0"
description = "hloc"
authors = ["PKehnel <ga65coy@mytum.de>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
pycolmap = {git = "https://github.com/mihaidusmanu/pycolmap.git"}
h5py = "^2.10.0"
tqdm = "^4.48.2"
opencv-python = "^4.3.0"
matplotlib = "^3.3.0"
tensorflow = "1.15.2"
progressbar = "^2.5"
exifread = "^2.3.2"
geopy = "^2.0.0"
ImageHash = "^4.2.0"
APScheduler = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
